# scoutr

./: .gitignore  DEV4_MERGE_GUIDE.md  INTEGRATION_CONTRACTS.md  MERGE_NOTES.md  README.md  SCOUTR_DEEP_DIVE.md  ScoutR.docx  ScoutR.md  inspect_players_db.py  pyproject.toml  requirements.txt
backend/: .env.example  check_chroma.py  debug_id.py  requirements.txt  run.py  verify.py
backend/app/: config.py  main.py  mock_data.py  schemas.py
backend/app/agents/: orchestrator.py  query_parser.py  scout_agent.py  valuation_agent.py
backend/app/services/: cache_service.py  chroma_service.py  comparables.py  csv_service.py  mongo_service.py  player_search.py  sqlite_service.py
backend/data_pipeline/: enrich_live_data.py  ingest_match_stats.py  ingest_statsbomb.py  scrape_fbref.py  seed_golden_path.py  seed_match_stats.py
backend/data_pipeline/data/: transfermarkt.csv
backend/scoutr/: __init__.py  golden_path.py
backend/scoutr/agents/: __init__.py  monitoring.py  tactical_fit.py
deploy/: backend.sh  frontend.sh  setup.sh  start.sh
frontend/: index.html  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  (+3 more)
scoutr-backend/: README.md  requirements.txt
scoutr-backend/app/: main.py
scoutr-backend/tests/: test_api.py
scoutr/api/: __init__.py
scoutr/scoring/: __init__.py
tests/: __init__.py  conftest.py  test_api_export_router.py  test_export.py  test_formations.py  test_golden_path.py  test_monitoring.py  test_tactical_fit.py  test_tactical_score.py
tests/integration/: __init__.py  conftest.py  test_backend_integration.py
(+46 files in other folders)
