[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutr"
version = "0.1.0"
description = "Agentic AI Transfer Intelligence for Football Clubs"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pdfkit>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scoutr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
